fix: word wrapping

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -138,7 +138,7 @@
 }
 
 @utility typography {
-  @apply prose prose-zinc dark:prose-invert;
+  @apply prose prose-zinc dark:prose-invert wrap-break-word;
   @apply prose-a:decoration-current/30 prose-a:underline-offset-4 prose-a:transition-colors prose-a:hover:decoration-current;
   @apply prose-blockquote:prose-p:before:hidden;
 
